# B2_Z1_Ros2_Digital_Twin

./: README.md  README_old.md
ros_ws_shrd/B2_URDF/b2_description/install/: local_setup.sh  setup.sh
ros_ws_shrd/B2_URDF/b2_description/log/: latest_build
ubuntu_2004/docker/: ROS_noetic.dockerfile
ubuntu_2004/docker/config/: bashrc  entrypoint.sh
ubuntu_2004/docker/scripts/: build.sh  run.sh
ubuntu_2004/ros_ws/log/: latest_build
ubuntu_2204/docker/: ROS_humble.dockerfile
ubuntu_2204/docker/config/: bashrc  entrypoint.sh
ubuntu_2204/docker/scripts/: build.sh  run.sh
ubuntu_2204/ros_ws/b2_ws/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
ubuntu_2204/ros_ws/b2_ws/install/b2_ctrl/: low_level_ctrl  read_low_state
ubuntu_2204/ros_ws/b2_ws/log/: latest_build
ubuntu_2204/ros_ws/b2_ws/src/b2_ctrl/: CMakeLists.txt  package.xml
ubuntu_2204/ros_ws/b2_ws/src/b2_ctrl/src/: b2_z1_control.cpp  sport_mode_ctrl.cpp
ubuntu_2204/ros_ws/b2_ws/src/b2_nodes/: package.xml  setup.cfg  setup.py
ubuntu_2204/ros_ws/b2_ws/src/b2_nodes/b2_nodes/: parse_joint_state.py  parse_joint_state_z1_b2.py  parse_odometry.py
ubuntu_2204/ros_ws/b2_ws/src/b2_urdf/: CMakeLists.txt
ubuntu_2204/ros_ws/b2_ws/src/b2_urdf/install/: local_setup.sh  setup.sh
ubuntu_2204/ros_ws/b2_ws/src/b2_urdf/launch/: b2_model.launch.py  b2_z1_rviz.launch.py  b2_z1_rviz_real2sim.launch.py
ubuntu_2204/ros_ws/b2_ws/src/b2_urdf/log/: latest_build
ubuntu_2204/ros_ws/b2_ws/src/b2_urdf/urdf/: b2_with_z1.xacro  (+1 more)
ubuntu_2204/ros_ws/b2_ws/src/py_cpp/: CMakeLists.txt
ubuntu_2204/ros_ws/b2_ws/src/z1_interfaces/: CMakeLists.txt
ubuntu_2204/ros_ws/b2_ws/src/z1_nodes/: CMakeLists.txt  package.xml
ubuntu_2204/ros_ws/b2_ws/src/z1_nodes/config/: arm_config.yaml
ubuntu_2204/ros_ws/b2_ws/src/z1_nodes/include/unitree_arm_sdk/math/: mathTools.h
ubuntu_2204/ros_ws/b2_ws/src/z1_nodes/scripts/: z1_motor_state_publisher.py
ubuntu_2204/ros_ws/b2_ws/src/z1_nodes/src/: z1_manager.cpp  z1_parse_joint_state.cpp
ubuntu_2204/ros_ws/b2_ws/src/z1_urdf/: CMakeLists.txt
ubuntu_2204/ros_ws/unitree_slam/rviz2/: re_localization.rviz
(+388 files in other folders)
